Refactors decoding of items (lazy parsing of claims)